rns-lang/tests/snapshots/jvms-001-interface-flag-with_all_exclusive_and_no_abstract.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class module interface final enum module super EmptyClass
.super java/lang/Object

.end class
----- INPUT -----
.class interface final super enum module EmptyClass
.super java/lang/Object

.end class
----- STDERR -----
[JVMS001] Warning: interface must also be declared as 'abstract'
   ╭─[ test_data/integration/jvms/001-interface-flag/with_all_exclusive_and_no_abstract.rns:1:8 ]
   │
 1 │ .class interface final super enum module EmptyClass
   │        ────┬────  
   │            ╰────── 'ACC_INTERFACE' requires 'ACC_ABSTRACT'
   │ 
   │ Help: Add the 'abstract' access flag to the class declaration.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/jvms001
───╯
[JVMS001] Warning: interface cannot be declared with mutually exclusive flags
   ╭─[ test_data/integration/jvms/001-interface-flag/with_all_exclusive_and_no_abstract.rns:1:8 ]
   │
 1 │ .class interface final super enum module EmptyClass
   │        ────┬──── ──┬── ──┬── ──┬─ ───┬──  
   │            ╰────────────────────────────── 'ACC_INTERFACE' is declared here
   │                    │     │     │     │    
   │                    ╰────────────────────── 'ACC_FINAL' is exclusive
   │                          │     │     │    
   │                          ╰──────────────── 'ACC_SUPER' is exclusive
   │                                │     │    
   │                                ╰────────── 'ACC_ENUM' is exclusive
   │                                      │    
   │                                      ╰──── 'ACC_MODULE' is exclusive
   │ 
   │ Help: Consider removing: 'ACC_FINAL', 'ACC_SUPER', 'ACC_ENUM', 'ACC_MODULE'.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/jvms001
───╯
----- HASH -----
ca88129d3076a99b7216b2ad82a3e86b330fee0ce70354bc083e84b93a0ac6f6
