rns-lang/tests/snapshots/jvms-001-interface-flag-with_one_exclusive.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class interface abstract final EmptyClass
.super java/lang/Object

.end class
----- INPUT -----
.class abstract final interface EmptyClass
.super java/lang/Object

.end class
----- STDERR -----
[JVMS-001] Warning: interface cannot be declared with mutually exclusive flags
   ╭─[ test_data/integration/jvms/001-interface-flag/with_one_exclusive.ja:1:23 ]
   │
 1 │ .class abstract final interface EmptyClass
   │                 ──┬── ────┬────  
   │                   ╰────────────── 'ACC_FINAL' is exclusive
   │                           │      
   │                           ╰────── 'ACC_INTERFACE' is declared here
   │ 
   │ Help: Consider removing: 'ACC_FINAL'.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/jvms-001
───╯
----- HASH -----
58e0d411251aa4b7f1da51b4f4a16bb1a644546213e22fb72aae1788ffcc2a39
