rns-lang/tests/snapshots/jvms-001-interface-flag-without_abstract_without_exclusive_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
.class interface EmptyClass
.super java/lang/Object

.end class
----- INPUT -----
.class interface EmptyClass
.super java/lang/Object

.end class
----- STDERR -----
[JVMS-001] Warning: interface must also be declared as 'abstract'
   ╭─[ test_data/integration/jvms/001-interface-flag/without_abstract_without_exclusive.ja:1:8 ]
   │
 1 │ .class interface EmptyClass
   │        ────┬────  
   │            ╰────── 'ACC_INTERFACE' requires 'ACC_ABSTRACT'
   │ 
   │ Help: Add the 'abstract' access flag to the class declaration.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/jvms-001
───╯
----- HASH -----
edba2e6c3461c5e97b7d8ee665cd8e523f57b49cfd367dad871d59a553dcd1b1
